--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -42,12 +42,12 @@ kfa = $(subst MB8684,KILDEER,$(indugenes))
 KFA = $(addprefix $(PG),$(addsuffix .fa,$(kfa)))
 KCDS = $(addprefix $(PG)cds_,$(addsuffix .fa,$(kfa)))
 
-AFA = $(subst .fa,_all.fa,$(UFA))
+AFA = $(subst $(PG),$(PG)all_,$(UFA))
 
 .PNONY:	catall
 catall:	$(AFA)
 
-$(PG)Contig%_all.fa:	$(PG)cds_Contig%_KILDEER.fa $(PG)Contig%.fa
+$(PG)all_Contig%.fa:	$(PG)cds_Contig%_KILDEER.fa $(PG)Contig%.fa
 	cat $^ | muscle > $@
 
 .PHONY:	kcat
