--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -106,7 +106,7 @@ inv%_depth.txt:	inv_depth.txt.gz
 ###### ######
 
 .PHONY:	alt-dxy
-alt-dxy:	$(PG)Contig1270altsnps.txt $(PG)Contig3357altsnps.txt $(PG)Contig1270dxy_rf_5k500.txt $(PG)Contig3357dxy_rf_5k500.txt $(PG)Contig1270dxy_rf_1k1.txt $(PG)Contig3357dxy_rf_1k1.txt $(PG)Contig1270dxy_rs_5k500.txt $(PG)Contig3357dxy_rs_5k500.txt $(PG)Contig1270dxy_rs_1k1.txt $(PG)Contig3357dxy_rs_1k1.txt
+alt-dxy:	$(PG)Contig1270altsnps.txt $(PG)Contig3357altsnps.txt $(PG)Contig1270dxy_rf_5k500.txt $(PG)Contig3357dxy_rf_5k500.txt $(PG)Contig1270dxy_rf_1k1.txt $(PG)Contig3357dxy_rf_1k1.txt $(PG)Contig1270dxy_rs_5k500.txt $(PG)Contig3357dxy_rs_5k500.txt $(PG)Contig1270dxy_rs_1k1.txt $(PG)Contig3357dxy_rs_1k1.txt $(PG)Contig1270dxy_fs_5k500.txt $(PG)Contig3357dxy_fs_5k500.txt $(PG)Contig1270dxy_fs_1k1.txt $(PG)Contig3357dxy_fs_1k1.txt
 
 $(PG)Contig%dxy_rf_5k500.txt:	$(PG)Contig%dxy_rf.txt $(PG)Contig%dxy_rf_5k500_sl.txt
 	awk ' BEGIN { n = 0; s = 0 }{ n++; if (n >= 5000) { s++; if (s == 500) { s = 0; print $$2 - (5000 / 2) } } } ' $(word 1,$^) > tmp$*_5k500_pos.txt
@@ -144,11 +144,32 @@ $(PG)Contig%dxy_rs_1k1_sl.txt:	$(PG)Contig%dxy_rs.txt
 
 ##
 
+$(PG)Contig%dxy_fs_5k500.txt:	$(PG)Contig%dxy_fs.txt $(PG)Contig%dxy_fs_5k500_sl.txt
+	awk ' BEGIN { n = 0; s = 0 }{ n++; if (n >= 5000) { s++; if (s == 500) { s = 0; print $$2 - (5000 / 2) } } } ' $(word 1,$^) > tmp$*_5k500_pos.txt
+	paste -d" " tmp$*_5k500_pos.txt $(word 2,$^) > $@
+	rm tmp$*_5k500_pos.txt
+
+$(PG)Contig%dxy_fs_5k500_sl.txt:	$(PG)Contig%dxy_fs.txt
+	cat $^ | slmean -k 3 -w 5000 -s 500 > $@
+
+$(PG)Contig%dxy_fs_1k1.txt:	$(PG)Contig%dxy_fs.txt $(PG)Contig%dxy_fs_1k1_sl.txt
+	awk ' BEGIN { n = 0; s = 0 }{ n++; if (n >= 1000) { s++; if (s == 1) { s = 0; print $$2 - (1000 / 2) } } } ' $(word 1,$^) > tmp$*_1k1_pos.txt
+	paste -d" " tmp$*_1k1_pos.txt $(word 2,$^) > $@
+	rm tmp$*_1k1_pos.txt
+
+$(PG)Contig%dxy_fs_1k1_sl.txt:	$(PG)Contig%dxy_fs.txt
+	cat $^ | slmean -k 3 -w 1000 -s 1 > $@
+
+##
+
 $(PG)Contig%dxy_rf.txt:	$(PG)Contig%altsnps.txt
 	awk ' { print $$1,$$2,($$7+$$8)/2 } ' $^ > $@
 
 $(PG)Contig%dxy_rs.txt:	$(PG)Contig%altsnps.txt
 	awk ' { print $$1,$$2,($$5+$$6)/2 } ' $^ > $@
+
+$(PG)Contig%dxy_fs.txt:	$(PG)Contig%altsnps.txt
+	awk ' { print $$1,$$2,(($$5*$$8)+($$6*$$7))/4 } ' $^ > $@
 
 $(PG)Contig%altsnps.txt:	hapalign/Contig%ht_ref_alignment.mafft.fasta
 	python ~/lib/Evolib/fabysite.py $^ > $@
