--- a/pugnax_popgen/Makefile
+++ b/pugnax_popgen/Makefile
@@ -8,7 +8,7 @@ AA = $(SH)aa/
 
 slpar = -w $(lwin) -s $(step)
 coi = 2548
-#coi = 1270 2063 2548 3047 3208 3357 3750 3913 4111 4944 9013
+#coi = 1270 2063 3047 3208 3357 3750 3913 4111 4944 9013
 phased = MB8684ht MB8685ht MB8686ht MB8687ht MB8688ht
 
 pcoi = $(addprefix Contig,$(coi))
